Se reparan rutas protegiendolas seguramente y reparamos gestion de cuentas en admin.
